Update .config/starship.toml Update .gitconfig

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -277,3 +277,8 @@ surface0 = "#363a4f"
 base = "#24273a"
 mantle = "#1e2030"
 crust = "#181926"
+
+[shell]
+disabled = false
+powershell_indicator = 'posh'
+pwsh_indicator = 'pwsh'
