Update .chezmoiscripts/once-InvokeWingetConfiguration_Windows.ps1 Update .config/starship.toml

--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -55,8 +55,8 @@ truncation_length = 3
 truncation_symbol = "…/"
 
 [directory.substitutions]
+"OneDrive - Performance Contracting Group" = "󰏊|PCG"
 "OneDrive" = "󰏊"
-"Performance Contracting Group" = "PCG"
 "Documents" = "󰈙"
 "Downloads" = ""
 "Music" = "󰝚"
