--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -1,3 +1,3 @@
 {{ if ne .chezmoi.os "windows" }}
-AppData\Local\Packages\Microsoft.WindowsTerminal_8wekyb3d8bbwe\LocalState\settings.json
+AppData\**\*
 {{ end }}
